# TSP-GeneticAlgorithm

./: .gitignore  CMakeLists.txt  README.md  benchmark.sh  gameOfLife.h  main.cpp
Assignments/FifthAssignmentParallel/: CMakeLists.txt  comp.sh  compdecomp  compdecomp.cpp  decomp.sh  ffc_farm  ffc_farm.cpp  ffc_pipe  prova.txt  utility.hpp
Assignments/FifthAssignmentParallel/report/: relazione.aux  relazione.tex
Assignments/FirstAssignmentParallel/docs/: relazione.tex
Assignments/FourthAssignmentParallel/: CMakeLists.txt  main  main.cpp  readme.txt
Assignments/SecondAssignmentParallel/: FastflowParallelFor.h  MasterWorker.h  README.txt  main.cpp
Assignments/SecondAssignmentParallel/benchmark/scalability/5000000/: benchmark-5000000.txt
Assignments/SecondAssignmentParallel/benchmark/scalability/50000000/: pf_50000000.txt
Assignments/SecondAssignmentParallel/benchmark/speedup/500000/: mw_500000.txt
Assignments/ThirdAssignmentParallel/: README.md  divideAndConquer.cpp  main.cpp
FifthAssignmentParallel/: ffc_pipe.cpp
FirstAssignmentParallel/: CMakeLists.txt  gameOfLife.h
FirstAssignmentParallel/GameOfLife_Francesco_Corti_606922 (1)/Results/: pragmaThreads_5000.txt  standardThreads_500.txt  standardThreads_5000.txt
FirstAssignmentParallel/GameOfLife_Francesco_Corti_606922 (2)/Code/: gameOfLife.h
FirstAssignmentParallel/GameOfLife_Francesco_Corti_606922 (2)/Results/: pragmaThreads_10000.txt  pragmaThreads_500.txt
FirstAssignmentParallel/GameOfLife_Francesco_Corti_606922/Results/: standardThreads_10000.txt
FourthAssignmentParallel/: ImageProcessing.h  main.cpp
FourthAssignmentParallel/benchmark/: openMp300.txt  standardThread300.txt  standard_scalability.gp  standard_speed.gp  zoom_scalability.gp  zoom_speed.gp
GeneticTSP/: CMakeLists.txt  main.cpp
GeneticTSP/report/: bibliografia.bib  relazione.run.xml  relazione.tex
GeneticTSP/report/benchmark/convergence/: sequential-200-2000-5000.txt
GeneticTSP/report/benchmark/fastflow/: ff100020000.txt  ff200020000.txt
GeneticTSP/report/benchmark/sequential/: sequentialMeasure
GeneticTSP/report/benchmark/standard/: standard50020000.txt
GeneticTSP/report/sez/: conclusion.tex  introduction.tex  parallelArchitecture.tex  results.tex
GeneticTSP/src/graph/: graph.h
GeneticTSP/src/tsp/: fastflowTSP.h  geneticAlgorithm.h  parallelTSP.h  sequentialTSP.h  tsp.h
SecondAssignmentParallel/: CMakeLists.txt  MasterWorker.h  README.md  benchmark.sh  main  main.cpp
SecondAssignmentParallel/benchmark/: SequentialTimeMeasures
SecondAssignmentParallel/benchmark/scalability/: standard_scal.gp  zoom_scal.gp
SecondAssignmentParallel/benchmark/scalability/500000/: benchmark-500000.txt  pf_500000.txt  standard_scal.gp  zoom_scal.gp
SecondAssignmentParallel/benchmark/scalability/5000000/: pf_5000000.txt  standard_scal.gp  zoom_scal.gp
SecondAssignmentParallel/benchmark/scalability/50000000/: benchmark-50000000.txt  mw_50000000.txt  standard_scal.gp  zoom_scal.gp
SecondAssignmentParallel/benchmark/speedup/: standard_speed.gp  zoom_speed.gp
SecondAssignmentParallel/benchmark/speedup/500000/: standard_speed.gp  zoom_speed.gp
SecondAssignmentParallel/benchmark/speedup/5000000/: mw_5000000.txt  standard_speed.gp  zoom_speed.gp
SecondAssignmentParallel/benchmark/speedup/50000000/: standard_speed.gp  zoom_speed.gp
ThirdAssignmentParallel/: CMakeLists.txt  README.md
builds/: Sequential  TSP_Fastflow  TSP_Standard
docs/: relazione.tex
report/: relazione.aux
report/benchmark/convergence/: ff-200-2000-5000.txt  standard-200-2000-5000.txt
report/benchmark/fastflow/: ff50020000.txt
report/benchmark/standard/: standard100020000.txt  standard200020000.txt
report/sez/: conclusion.tex  parallelArchitecture.tex
src/tsp/: sequentialTSP.h
